[tool.poetry]
name = "nonebot_plugin_imagetools"
version = "0.3.0"
description = "Nonebot2 简单图片操作插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-imagetools"
repository = "https://github.com/noneplugin/nonebot-plugin-imagetools"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.1", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = ">=0.3.0,<1.0.0"
nonebot-plugin-alconna = ">=0.19.2,<1.0.0"
httpx = ">=0.19.0,<1.0.0"
Pillow = ">=9.2.0,<11.0.0"
pil-utils = "^0.1.8"

[tool.poetry.group.dev.dependencies]
nonebot-adapter-onebot = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
